# tickit

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  llms.txt
.github/workflows/: release.yml  website.yml
screenshots/: demo.tape
scripts/: populate-demo.sh
src/: config.rs  db.rs  export.rs  lib.rs  main.rs  models.rs  notifications.rs  theme.rs
src/app/: events.rs  mod.rs  state.rs  ui.rs
src/sync/: client.rs  mod.rs  types.rs
tickit-sync/: README.md
website/: .gitignore  astro.config.mjs  package-lock.json  package.json
website/public/: CNAME  llms.txt  robots.txt  sitemap.xml
website/src/layouts/: Layout.astro
website/src/pages/: docs.astro  index.astro  themes.astro
